[gd_scene load_steps=11 format=2]

[ext_resource path="res://textures/Boss_Head.tres" type="Texture" id=1]
[ext_resource path="res://textures/Boss_Body.tres" type="Texture" id=2]
[ext_resource path="res://textures/Boss_Crown.tres" type="Texture" id=3]
[ext_resource path="res://textures/Boss_Leg.tres" type="Texture" id=4]
[ext_resource path="res://textures/Boss_Arm.tres" type="Texture" id=5]
[ext_resource path="res://entities/enemies/Boss.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0

[sub_resource type="Animation" id=3]
resource_name = "default"
loop = true
step = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Torso/RightChest:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 22, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Torso/LeftChest:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -22, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Torso/Head:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -19, -0.25, 0, 0.25, 0, -17, -0.25, 0, 0.25, 0, -19, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=4]
resource_name = "hurt"
length = 0.5
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("Torso/Head:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 1 ) ]
}

[node name="Boss" type="KinematicBody2D"]
position = Vector2( 0, 1.07341 )
collision_layer = 4
collision_mask = 39
script = ExtResource( 6 )

[node name="Torso" type="Sprite" parent="."]
position = Vector2( 0, 3.92659 )
texture = ExtResource( 2 )

[node name="RightChest" type="Sprite" parent="Torso"]
position = Vector2( 6, -9 )
texture = ExtResource( 2 )

[node name="RightArm" type="Sprite" parent="Torso/RightChest"]
position = Vector2( 10, -2 )
rotation = -1.5708
texture = ExtResource( 5 )

[node name="RightHand" type="Sprite" parent="Torso/RightChest/RightArm"]
position = Vector2( -9, 4 )
rotation = -1.5708
texture = ExtResource( 5 )

[node name="LeftChest" type="Sprite" parent="Torso"]
position = Vector2( -6, -9 )
texture = ExtResource( 2 )

[node name="LeftArm" type="Sprite" parent="Torso/LeftChest"]
position = Vector2( -10, -2 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="LeftHand" type="Sprite" parent="Torso/LeftChest/LeftArm"]
position = Vector2( 9, 4 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="Head" type="Sprite" parent="Torso"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -19 )
texture = ExtResource( 1 )

[node name="Crown" type="Sprite" parent="Torso/Head"]
position = Vector2( 0, -9 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="Torso/Head"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torso/Head/Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="RightThigh" type="Sprite" parent="Torso"]
position = Vector2( 3, 9 )
rotation = 0.00806656
texture = ExtResource( 5 )

[node name="RightFoot" type="Sprite" parent="Torso/RightThigh"]
position = Vector2( -1, 11 )
texture = ExtResource( 4 )
flip_h = true

[node name="LeftThigh" type="Sprite" parent="Torso"]
position = Vector2( -3, 9 )
rotation = -0.00806656
texture = ExtResource( 5 )

[node name="LeftFoot" type="Sprite" parent="Torso/LeftThigh"]
position = Vector2( 1, 11 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.92659 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 3 )
anims/hurt = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -15.0734 )
collision_layer = 776
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -9.53674e-07, 3.5711 )
scale = Vector2( 0.807292, 0.833333 )
build_mode = 1
polygon = PoolVector2Array( -27.2516, 22.0266, -27.2516, 22.0266, -26.0129, 6.42659, -7.43226, 4.02659, 7.43226, 4.02659, 26.0129, 6.42659, 27.2516, 22.0266, 8.67097, 24.4266, 7.43226, 47.2266, -7.43226, 47.2266, -8.67097, 24.4266 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0, -3.07341 )
build_mode = 1
polygon = PoolVector2Array( -4, -5, 4, -5, 0, -11 )
[connection signal="area_entered" from="Torso/Head/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
